tests/fails/vectorerror.t
if not require("fail") then return end



terra foobar()
	var a : vector(int,morenonsense)
end


foobar()
